@@ -1,5 +1,9 @@
 2004-09-18  Jackson Harper  <jackson@ximian.com>
 
+	* Syscall.cs: Add support for poll ().
+
+2004-09-18  Jackson Harper  <jackson@ximian.com>
+
 	* make-map.cs: Use field value not name for #defines.
 		
 2004-09-14  Loren Bandiera <lorenb@mmgsecurity.com>
